--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -100,158 +100,69 @@
 
 
 		<div class="section-grey bg-light" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem;">
-			<div class="search-bar" style="width: 100%; margin-bottom: 20px;">
-				<input type="text" placeholder="Recherchez ici..." class="form-control" style="width: 100%; padding: 15px; font-size: 18px; border-radius: 5px; border: 1px solid #ccc;">
-				<button type="button" class="btn btn-primary" style="padding: 10px 20px; font-size: 18px; border-radius: 0 5px 5px 0; border: none; color: white; cursor: pointer; margin-left:-2rem">
-					Rechercher
-				</button>
+			<div class="container mt-5">
+				<div class="text-center mb-4">
+					<h4 class="font-weight-bold">Les offres</h4>
+					<p class="text-muted">Trouvez les entreprises correspondant à vos critères</p>
+				</div>
+
+				<form id="matchingForm" class="bg-white p-4 m-4 shadow-sm rounded">
+					<div class="row">
+						<div class="col-md-4 mb-3">
+							<label for="salary" class="form-label">Salaire minimum souhaité (€)</label>
+							<input type="number" id="salary" name="salary" class="form-control" placeholder="Ex : 40000">
+						</div>
+
+						<div class="col-md-4 mb-3">
+							<label for="location" class="form-label">Localisation</label>
+							<input type="text" id="location" name="location" class="form-control" placeholder="Ex : Paris, France">
+						</div>
+
+						<div class="col-md-4 mb-3">
+							<label for="experience" class="form-label">Niveau d'expérience</label>
+							<input type="number" id="experience" name="experience" class="form-control" min="1" max="5" placeholder="Ex : 3">
+						</div>
+					</div>
+
+					<div class="form-group mb-3">
+						<label for="languages" class="form-label">Langages ou technologies</label>
+						<select id="languages" name="languages[]" class="form-control" multiple>
+							<option value="python">Python</option>
+							<option value="javascript">JavaScript</option>
+							<option value="java">Java</option>
+							<option value="php">PHP</option>
+							<option value="csharp">C#</option>
+						</select>
+						<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
+					</div>
+
+
+					<div class="text-center">
+						<button type="button" id="matchButton" class="btn btn-primary">Trouver des entreprises</button>
+					</div>
+				</form>
 			</div>
 			<div class="container">
-				<div
-					class="row">
-					<!-- Offre 1 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Chef de projet SI</h5>
-								<p class="card-text">
-									Stage de 6 mois
-									<br>
-									Nanterre, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 2 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Software Developer</h5>
-								<p class="card-text">
-									CDI
-									<br>
-									Boulogne-Billancourt, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 3 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
-								<p class="card-text">
-									Stage de 4 à 6 mois
-									<br>
-									Courbevoie, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-				</div>
+				<div class="row">
+					{% for fiche in fiches_de_poste %}
+						<div class="col-md-6 col-lg-4 mb-4">
+							<div class="card shadow-sm p-3">
+								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+								<div class="card-body">
+									<h3>
+										{{ fiche.entreprise.nom }}</h3>
 
-				<div
-					class="row">
-					<!-- Offre 1 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Chef de projet SI</h5>
-								<p class="card-text">
-									Stage de 6 mois
-									<br>
-									Nanterre, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
+									<h5 class="card-title">{{ fiche.titre }}</h5>
+									<p class="card-text">
+										{{ fiche.description }}
+										<br>
+										{{ fiche.localisation }}
+									</p>
+									<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<!-- Offre 2 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Software Developer</h5>
-								<p class="card-text">
-									CDI
-									<br>
-									Boulogne-Billancourt, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 3 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
-								<p class="card-text">
-									Stage de 4 à 6 mois
-									<br>
-									Courbevoie, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div
-					class="row">
-					<!-- Offre 1 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Chef de projet SI</h5>
-								<p class="card-text">
-									Stage de 6 mois
-									<br>
-									Nanterre, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 2 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Software Developer</h5>
-								<p class="card-text">
-									CDI
-									<br>
-									Boulogne-Billancourt, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 3 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm p-3">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
-								<p class="card-text">
-									Stage de 4 à 6 mois
-									<br>
-									Courbevoie, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
+					{% endfor %}
 				</div>
 			</div>
 
