--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -151,12 +151,12 @@
 
 				<div class="row mt-5">
 					<div class="col-lg-4 mx-auto">
-						<a href="{{path('app_infojob')}}" class="btn btn-primary btn-block">Voir plus</a>
+						<a href="{{path('app_offre')}}" class="btn btn-primary btn-block">Voir plus</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="site-section bg-light" id="blog-section">
 			<div class="container">
 				<div class="row">
@@ -188,7 +188,7 @@
 
 				<div class="row mt-5">
 					<div class="col-lg-4 mx-auto">
-						<a href="{{ path('app_infojob') }}" class="btn btn-primary btn-block">Voir plus</a>
+						<a href="{{ path('app_offre') }}" class="btn btn-primary btn-block">Voir plus</a>
 					</div>
 				</div>
 			</div>
@@ -200,7 +200,7 @@
 					<div class="col-lg-4">
 						<div class="widget">
 							<h3>À propos</h3>
-							<p>AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
 						</div>
 						<div class="widget">
 							<h3>Connectez-vous avec nous</h3>
