--- a/symfony-project/templates/fiche_de_poste/index.html.twig
+++ b/symfony-project/templates/fiche_de_poste/index.html.twig
@@ -32,6 +32,12 @@
 								<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
 							</li>
 							<li>
+								<a class="text-black" href="{{ path('app_notifications_company') }}">
+									Notifications
+									<span class="icon-notifications"></span>
+								</a>
+							</li>
+							<li>
 								<a class="text-black" href="">Statistiques</a>
 							</li>
 							<li class="has-children">
