--- a/symfony-project/templates/matching/match.html.twig
+++ b/symfony-project/templates/matching/match.html.twig
@@ -77,7 +77,7 @@
 								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">Favoris</a>
+								<a class="text-black text-bold" href="{{path('app_favori')}}">Favoris</a>
 							</li>
 							<li>
 								<a class="text-black text-bold" href="">
