--- a/symfony-project/templates/offre/detail.html.twig
+++ b/symfony-project/templates/offre/detail.html.twig
@@ -45,7 +45,7 @@
 								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black" href="">Favoris</a>
+								<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
 							</li>
 							<li>
 								<a class="text-black" href="">
@@ -60,46 +60,34 @@
 				</div>
 			</nav>
 		</div>
-
-
-		<div class="container mt-5">
-			<div class="card shadow-lg">
-				<div class="card-header bg-primary text-white text-center">
-					<h2 class="mb-0 text-white">{{ fiche.titre }}</h2>
-				</div>
-				<div
-					class="card-body">
-					<!-- Informations générales -->
-					<h4 class="text-primary">Informations générales</h4>
-					<p>
-						<strong>Localisation :</strong>
-						{{ fiche.localisation }}</p>
-					<p>
-						<strong>Technologies :</strong>
-						{{ fiche.technologies }}</p>
-					{# <p><strong>Niveau d'expérience :</strong> {{ fiche.niveau_experience }}</p> #}
-					{# <p><strong>Salaire proposé :</strong> {{ fiche.salaire_propose }}</p> #}
-					<p>
-						<strong>Description :</strong>
-						{{ fiche.description }}</p>
-
-					<!-- Description de l'entreprise -->
-					{# <h4 class="text-primary mt-4">Qui sommes-nous ?</h4>
-					                <p>{{ fiche.entreprise.description }}</p>
-					
-					                <ul>
-					                    {% for mission in fiche.entreprise.missions %}
-					                        <li>{{ mission }}</li>
-					                    {% endfor %}
-					                </ul>
-					
-					                <!-- Avantages pour les stagiaires -->
-					                <h4 class="text-primary mt-4">Pourquoi choisir un stage chez {{ fiche.entreprise.nom }} ?</h4>
-					                <p>{{ fiche.avantages }}</p> #}
-
-					<!-- Actions -->
-						<div class="text-center mt-4"> <a href="{{ path('app_success') }}" class="btn btn-primary btn-lg">Candidature simplifiée</a>
-						<a href="{{ path('app_success') }}" class="btn btn-outline-primary btn-lg ml-2">Enregistrer</a>
+		<div class="site-section bg-light d-flex" ">
+			<div class="container">
+				<div class="card shadow-lg">
+					<div class="card-header bg-primary text-white text-center">
+						<h2 class="mb-0 text-white">{{ fiche.titre }}</h2>
+					</div>
+					<div class="card-body">
+						<h4 class="text-primary">Informations générales</h4>
+						<p>
+							<strong>Localisation :</strong>
+							{{ fiche.localisation }}</p>
+						<p>
+							<strong>Technologies :</strong>
+							{{ fiche.technologies }}</p>
+						<p>
+							<strong>Niveau d'expérience :</strong>
+							{{ fiche.niveauExperience }}
+							ans</p>
+						<p>
+							<strong>Salaire proposé :</strong>
+							{{ fiche.salairePropose }}</p>
+						<p>
+							<strong>Description :</strong>
+							{{ fiche.description }}</p>
+						<div class="text-center mt-4">
+							<a href="{{ path('app_success') }}" class="btn btn-primary btn-lg">Candidature simplifiée</a>
+							<a href="{{ path('app_success') }}" class="btn btn-outline-primary btn-lg ml-2">Enregistrer</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -111,7 +99,7 @@
 					<div class="col-lg-4">
 						<div class="widget">
 							<h3>À propos</h3>
-							<p>AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
 						</div>
 						<div class="widget">
 							<h3>Connectez-vous avec nous</h3>
