--- a/symfony-project/templates/offre/success.html.twig
+++ b/symfony-project/templates/offre/success.html.twig
@@ -17,13 +17,13 @@
 						<img style="width:50vw; height:30vw" src="https://img.freepik.com/free-vector/bright-flyer-easy-access-online-cartoon-flat_81522-3962.jpg?ga=GA1.1.73765508.1719503126&semt=ais_hybrid">
 					</div>
 					<h2 class="card-title">Envoi réussi !</h2>
-					<p class="card-text">Votre formulaire a été soumis avec succès. Merci pour votre confiance.</p>
+					<p class="card-text">Votre candidature a été soumis avec succès. Merci pour votre confiance.</p>
 					<hr>
 					<p class="card-text">Que souhaitez-vous faire ensuite ?</p>
 					<div class="d-flex justify-content-center">
-						<a href="{{path('app_inscription')}}" class="btn btn-primary mx-2">Retour à l'accueil</a>
-						<a href="{{path('app_offre')}}" class="btn btn-success mx-2">Explorer les offres</a>
-						<a href="{{path('app_favorites')}}" class="btn btn-secondary mx-2">Voir mon profil</a>
+						<a href="{{path('app_developer')}}" class="btn btn-primary mx-2">Retour à l'accueil</a>
+						<a href="{{path('app_offre')}}" class="btn btn-success mx-2">Explorer d'autres offres</a>
+						<a href="{{path('app_favori')}}" class="btn btn-secondary mx-2">Voir mes favoris</a>
 					</div>
 				</div>
 			</div>
