--- a/symfony-project/templates/profil/profile.html.twig
+++ b/symfony-project/templates/profil/profile.html.twig
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="container" style="margin-top:10rem;">
-			
+
 			<div class="team row">
 				<div class="col-md-4 col-lg-3 pic">
 					<img src="images/person_1-min.jpg" alt="Image" class="w-95 img-fluid">
@@ -123,7 +123,7 @@
 					<div class="col-lg-4">
 						<div class="widget">
 							<h3>À propos</h3>
-							<p>AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
 						</div>
 						<div class="widget">
 							<h3>Connectez-vous avec nous</h3>
